--- a/recovery/src/main/res/layout/activity_recovery.xml
+++ b/recovery/src/main/res/layout/activity_recovery.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#E6E6E6"
     android:fitsSystemWindows="true"
-    tools:context="com.zxy.recovery.core.RecoveryActivity">
+    tools:context="com.hawk.recovery.core.RecoveryActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
