--- a/recovery/src/main/res/menu/menu_recovery.xml
+++ b/recovery/src/main/res/menu/menu_recovery.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.zxy.recovery.core.RecoveryActivity">
+      tools:context="com.hawk.recovery.core.RecoveryActivity">
     <item
         android:id="@+id/action_debug"
         android:orderInCategory="100"
